# test-1

./: .gitignore  .prettierignore  .prettierrc  Dockerfile  GoogleService-Info.plist  README.md  WEEKLY_GOALS_README.md  app.config.js  babel.config.js  deploy-staging.sh  docker-compose.yml  eas.json  eslint.config.js  google-services.json  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  test-goals-api.js  tsconfig.json  turbo.json
evra-server/api/: .dockerignore  .env.example  .gitignore  .json  Dockerfile  README.md  SCORING_IMPROVEMENTS.md  debug_goals_dashboard.py  example_encryption_usage.py  pyproject.toml
evra-server/api/app/: config.py  exceptions.py  main.py  prompts.py
evra-server/api/app/core/: security.py
evra-server/api/app/routers/ai/: chat.py  goals.py  lab_report.py  personalization_profile.py
evra-server/api/app/routers/backend/: app_version.py  auth.py  community.py  deep_links.py  delete_account.py  dexcom.py  health_alert.py  health_export.py  health_score.py  nudge.py  preferences.py  review.py  upload.py  user.py
evra-server/api/app/schemas/: utils.py
evra-server/api/app/schemas/ai/: goals.py  health_insights.py  lab_report.py  planner.py
evra-server/api/app/schemas/backend/: action_completions.py  app_version.py  community.py  delete_account.py  dexcom.py  diagnosis.py  documents.py  encrypt.py  health_alert.py  health_export.py  health_score.py  notifications.py  nudge.py  preferences.py  profile.py  review.py  scheduler.py  user.py
evra-server/api/app/services/ai_services/: chat_service.py  document_extraction_service.py  document_processor.py  goals_service.py  lab_report_service.py  memory_service.py  mongodb_vectorstore.py  personalization_profile_service.py  transcription_service.py
evra-server/api/app/services/backend_services/: app_version_service.py  community_service.py  community_service_pleroma.py  db.py  delete_account_service.py  dexcom_service.py  document_manager.py  (+12 more)
evra-server/api/scripts/: check_duplicate_jobs.py  cleanup_agents.py  dev_server.py  prod_server.py
evra-server/api/tests/: conftest.py  test_alert_values_manual.py  test_auth_changes.py  test_auth_core.py  test_auth_structure.py  test_chat_service.py  test_goals_dashboard_fix.py  test_goals_date_fallback.py  test_health_alerts_actual_values.py  test_lab_score_comparison.py  test_llm_guardrails.py
(+343 files in other folders)
